# open-timeline

./: .gitignore  Cargo.toml  README.md
bins/: Cargo.toml  README.md
bins/assets/icons/: icon.icns
crates/core/: Cargo.toml  LICENSE
crates/core/src/: date.rs  entity.rs  id.rs  lib.rs  name.rs  reduced.rs  timeline_edit.rs  timeline_view.rs
crates/core/src/reduced/: entities.rs  entity.rs  timeline.rs  timelines.rs
crates/core/test-data/entities/invalid/: 1.jsonc  10.jsonc  11.jsonc  2.jsonc  3.jsonc  4.jsonc  5.jsonc  6.jsonc  7.jsonc  8.jsonc  9.jsonc
crates/core/test-data/entities/valid/: 1.json
crates/crud/: Cargo.toml
crates/crud/.sqlx/: query-00bf190fefd4ad2f9947f4fe96ec7f55f3fcdc03c27340208cb34df3ac4fde12.json  query-089c10d099bebbc07c9022c78f782f1deb4deda6a5d968cede966b993909dce8.json  query-0e7fd3cab4dd8e1e4a55dd66b79e6ac79c73f7128685e96632671ca5a8f5a80a.json  query-1063a67afa8600ae2dd1acd2e640d51bd030908f65ff61294357f707e3813f61.json  query-1a0e1952cdde2832bee34894ae9692480a34da62ecf430be1a2cf325a1a4e8b6.json  query-1cee30600aa66715115c503406ff7ea35613e0fa748f95ca4b899a77198c9087.json  query-1e46ac5b740ed72e9f24c9450d05cd609fa05aa82c89aabcd6c2b8db7d329078.json  query-1f41ba4c52180a4ce82a50af110fa8725c5b5e6f651dbacea2ad4b4a29a2decb.json  query-21ca7598d1c23d62e4684d362a67f1fdba2eb477d9a788403b4940b6110bff15.json  query-2403ab4cdb56cb5742041790fac9ec9bfb52312d8a0c435dc20b52560926610a.json  query-265b73d255843b814b251c38af824353e9583d3683679f9fbd8fcdeebda7bd85.json  query-3267ef311d71ccf85e74fed00519dbc26d47f520ece23c49964410586404f1a0.json  query-3d462c7dacf155a8859e6b52efe1c111302f267bc16b45bfa6a85dd62a69d63c.json  query-450d5ac2e9519ebc5ae6aea201a4288fb7687cfa9c59bb5ea80dbebe47c6d8b8.json  query-45a6542948e49dda77c8bc8ac560c6a16d51920a4c8348b68fea816858448b31.json  query-47b5d47622b3a6ef5a5aa141db47bbc13679e3299c62430c6dd4bfe1cac96765.json  query-4e67c598ba9c978997c701a432af07ec14b48acae9171d1c260274ca89333927.json  query-4e9591e133250ee965b929d56f23231bbf98cdb8a70cb86ba9ef61bb5252c72d.json  query-510fe60966a0804c25def8733bcc5773ebc8111c13c144392f448ff0ee8dff9d.json  query-569f341f771f3e5ade580e8b76e88c84ded8f006e540d407943ffa35aad1a5bf.json  query-56ab01f3b85191751971b1217bf55d936b3459a91927082ad118f1b20c66187c.json  query-57221c756792d29c4e4b0bdba3377f3a2ec3702b6a0da2cb9f3478dde6e3a7db.json  query-698e17a33ba607beab0683b92bede396cb78ff5cb58a5b19fa650a04ddfd86ab.json  query-70a1bef65a7b2ef1a69650d56bf1cac3144265183a4cce4c340f1595ad9b63f4.json  query-7adc2113fa8b7f3ae2bae8fdc4f5a4e896d3899a0d337204a3adbd60e4cff8d5.json  query-7ca266f9cafecde291cfe813fbad3d4277551b6f84afefdcdfdc5249f570d3e2.json  query-827feb0ce3dc48cb41df8d2ec0d1a73db85ff5f8af398b97d978b802fd373d26.json  query-8557dd3563305aa12fa91e34164c346174f0529fafd2789b29897ab5d0feb130.json  query-89c531fcdd23634b84e6379e2e77b5dc0a2adf9d338849c3f88fd85d5fcfcb3e.json  query-8df7279cb03c19745ad43b1300e541965b90c3fec29b7deab29f013b0ec419ec.json  query-96ab229c8b34571cde5652892261e06d95c8d34e56043dcc81725b95d19fdb5b.json  query-9ae70f1ef70aeb613b1e937a8b373bb98c4d1a5e07a4622534a899a937ca79e7.json  query-9f5d9353e43fe21e46fce4835b896e7935eef70cd71415a072bb356d87ba811d.json  query-9f71ff7c251cff71e0e7a8fed24f428b1a05286566f286f4075332daefa56df6.json  query-9f8c69e4b3793b1308196599de0b3d8a1924f2cb4e5d0aba2b481710ea2b8b13.json  query-a25cf08f3a1a7fce86b58f1641a3d28cc0869082d72d6b6e992b796731731bf2.json  query-a93f8d98aff02054ce8a520f383789f1e65f296f7dc35fcd3ac816ec7e6cb086.json  query-ab4bf5346ecfbdbe36e4337fce4acbd6b1c9d8c737cd45cf3ae6d78f5eced94e.json  query-b4ccb5936c9009aa8cd295bb63dd90cd030b1c0aef27c1f7f7fadfef57ed9fbc.json  query-b532d21b2ecd266479f053204e9a9c42300ac10d0758dadbb3f7196d2325a585.json  (+18 more)
crates/crud/migrations/: 20250111134915_create-timeline.sql
crates/crud/src/: backup.rs  crud.rs  db.rs  lib.rs  stats.rs
crates/crud/src/crud/: automatic_tags.rs  common.rs  entity.rs  tags.rs  timeline.rs
crates/crud/src/crud/entity/: counts.rs  entities.rs  entity.rs  reduced_entities.rs  reduced_entity.rs  search.rs
crates/crud/src/crud/timeline/: common.rs  counts.rs  (+4 more)
crates/crud/test-data/: entities
crates/crud/test-data/seed/: entities.json  timelines.json
crates/games/: Cargo.toml
crates/games/src/: decades.rs  left_right.rs  lib.rs  order_entities.rs  were_they_alive_when.rs  which_date.rs
crates/gui/: Cargo.toml
crates/gui-core/: Cargo.toml
crates/gui-core/src/: check_for_updates.rs  egui.rs  enums.rs  helpers.rs  lib.rs  reload.rs  validity.rs
crates/gui-core/src/egui/: button.rs  consts.rs  draw.rs  error_style.rs  helpers.rs  label.rs  paginator.rs  shortcuts.rs  status.rs  window.rs
crates/gui/src/: app.rs  app_colours.rs  common.rs  components.rs  config.rs  consts.rs  games.rs  lib.rs  macros.rs  primary_window.rs  shortcuts.rs  windows.rs
crates/gui/src/components/: bool_expr.rs  common.rs  dates.rs  name.rs  subtimeline.rs  subtimelines.rs  tag.rs  tags.rs  timeline_entities.rs  timeline_entity.rs
crates/gui/src/games/: common.rs  decades.rs  left_right.rs  order_entities.rs  were_they_alive_when.rs  which_date.rs
crates/gui/src/primary_window/: app_info.rs  backup_merge_restore.rs  config.rs  databse_stats.rs  entity_counts.rs  search.rs  tag_counts.rs  timeline_counts.rs
crates/gui/src/windows/: app_colours.rs  entity_edit.rs  entity_view.rs  tag_edit.rs  tag_view.rs  timeline_edit.rs  timeline_view.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/js/: OpenTimelineCanvasElement.js
crates/renderer/src/: colour.rs  colours.rs  engine.rs  frontends.rs  lib.rs
crates/renderer/src/engine/: colours.rs  consts.rs  date_range.rs  entity.rs  events.rs  heading.rs  helpers.rs  layout_params.rs  point.rs  primitives.rs
crates/renderer/src/frontends/: desktop_egui.rs  html_canvas.rs
crates/renderer/test/: entities.json  main.html
crates/www-api/: Cargo.toml
crates/www-api/src/: consts.rs  error.rs  handlers.rs  helpers.rs  lib.rs  queries.rs
crates/www-api/src/handlers/: get.rs  non_get.rs
(+15 files in other folders)
