[package]
name = "open-timeline-games"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "OpenTimeline games"
repository = "https://github.com/harryhudson/open-timeline"
homepage = "https://github.com/harryhudson/open-timeline"

[dependencies]
open-timeline-core = { workspace = true }

bool-tag-expr = { version = "0.1.0-beta.1" }
log = "0.4.25"
thiserror = "2.0.11"
rand = "0.8.5"
