[package]
name = "open-timeline-gui-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "OpenTimeline GUI core"
repository = "https://github.com/harryhudson/open-timeline"
homepage = "https://github.com/harryhudson/open-timeline"

[dependencies]
eframe = "0.33.3"
log = "0.4.25"
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
