[package]
name = "open-timeline-renderer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "OpenTimeline renderer"
repository = "https://github.com/harryhudson/open-timeline"
homepage = "https://github.com/harryhudson/open-timeline"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
open-timeline-core = { workspace = true }

bool-tag-expr = { version = "0.1.0-beta.1" }
chrono = "0.4.39"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
eframe = "0.33.3"
getrandom = { version = "0.2.15", features = ["js"] }
gloo-timers = "0.3.0"
js-sys = "0.3.77"
lazy_static = "1.5.0"
log = "0.4.25"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "console",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "TextMetrics",
    "WheelEvent",
    "Window",
] }
