[package]
name = "open-timeline-www-api"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "OpenTimeline web API"
repository = "https://github.com/harryhudson/open-timeline"
homepage = "https://github.com/harryhudson/open-timeline"

[dependencies]
open-timeline-core = { workspace = true }
open-timeline-crud = { workspace = true }

bool-tag-expr = { version = "0.1.0-beta.1" }
axum = "0.8.1"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.11"
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
